# openclaw-credential-vault

./: .gitignore  .openclawignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE-NOTES.md  SPEC.md  install.sh  openclaw.plugin.json  package-lock.json  package.json  vitest.config.ts
clawhub-skill/: SKILL.md
docs/: ARCHITECTURE.md  E2E-TEST-DESIGN.md  FUTURE-WORK.md  GROUP-G-VERIFICATION.md  INSTALL-VERIFICATION.md  MESSAGE-SENDING-TEST-PLAN.md  SCRUB-EXPERIMENTS-v3.md  SCRUB-EXPERIMENTS-v4.1.md  SCRUB-EXPERIMENTS-v4.2.md  SCRUB-EXPERIMENTS-v4.3.md  SCRUB-EXPERIMENTS-v4.5.md  SCRUB-EXPERIMENTS-v4.6.md  SCRUB-EXPERIMENTS-v4.md  SCRUB-EXPERIMENTS-v5.1.md  SCRUB-EXPERIMENTS-v5.2.md  SCRUB-EXPERIMENTS-v5.md  SECURITY-AUDIT-2026-03-12-FINAL.md  SECURITY-AUDIT.md  SPEC.md  TESTING.md  THREAT-MODEL.md  VAULT-ADD-UX-OVERHAUL.md  platform-support.md
resolver/: Cargo.toml
resolver/src/: main.rs
src/: audit.ts  browser.ts  cli.ts  config.ts  crypto.ts  guesser.ts  index.ts  registry.ts  resolver.ts  scrubber.ts  types.ts
tests/: HOOK_E2E_GAP_ANALYSIS.md  adversarial.test.ts  audit-log.test.ts  audit.test.ts  browser-cookie.test.ts  browser-password-e2e.test.ts  browser-password.test.ts  browser-session-e2e.test.ts  browser.test.ts  cli-browser.test.ts  cli-logs-display.test.ts  cli-use-flag.test.ts  compaction-scrub.test.ts  concurrent.test.ts  config.test.ts  cross-compat.test.ts  crypto.test.ts  e2e.test.ts  env-injection-study.ts  env-scrub.test.ts  false-positives.test.ts  format-guessing.test.ts  guesser.test.ts  hook-e2e.test.ts  hooks.test.ts  interactive-flow.test.ts  (+14 more)
(+29 files in other folders)
