[package]
name = "openclaw-vault-resolver"
version = "0.1.0"
edition = "2021"
description = "Credential resolver binary for OpenClaw vault — decrypts credentials with OS-level isolation"

[[bin]]
name = "openclaw-vault-resolver"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
libc = "0.2"
caps = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
